# test_network_api

./: CMakeLists.txt  README.md  README_multiserver.md  data_1MB  main.camkes  receivedata.py  run_demo.sh  run_qemu_nic_sabre.sh  senddata.py  seos_system_config.h  system_config.h
components/ChanMux/: ChanMux.c  ChanMux.camkes  ChanMux_config.c
components/ConfigServer/: ConfigServer.camkes
components/ConfigServer/src/: ConfigServer.c  create_parameters.c  create_parameters.h  init_lib_with_mem_backend.c  init_lib_with_mem_backend.h
components/NwDriver/: nic_driver.c  nic_driver.camkes  nic_driver_1.c  nic_driver_2.c
components/NwStack/: NwStack.camkes  network_stack.c  network_stack.camkes  network_stack_1.c  network_stack_2.c
components/NwStack/util/: helper_func.c  helper_func.h
components/NwStackConfigurator/: NwStackConfigurator.c  NwStackConfigurator.camkes
components/TestAppClient/: test_app_client.c  test_app_client.camkes
components/TestAppMultiServer/: TestAppMultiServer.c  TestAppMultiServer.camkes
components/TestAppServer/: test_app_server.c  test_app_server.camkes
components/TestAppTCPClient/: TestAppTCPClient.c  TestAppTCPClient.camkes
components/TestAppTCPClient_send/: TestAppTCPClient_send.c  TestAppTCPClient_send.camkes
components/TestAppTCPServer/: TestAppTCPServer.c  TestAppTCPServer.camkes
components/TestAppTCPServer_recv/: TestAppTCPServer_recv.c  TestAppTCPServer_recv.camkes
components/TestAppUDPServer/: TestAppUDPServer.c  TestAppUDPServer.camkes
components/Ticker/: Ticker.c  Ticker.camkes
components/Timer/: timer.c  timer.camkes
components/TimerClient/: TimerClient.camkes  timer_client.c  timer_client.camkes
components/Uart/: Uart.camkes
components/test_APP/test_NwApp/: NwApp.camkes
components/test_APP/test_NwApp2/: NwApp_2.camkes
components/test_nwstack/CONFIGURATION/: CONFIGURATION.camkes
components/test_nwstack/ChanMux/: ChanMux.camkes
components/test_nwstack/NwDriver/: nic_driver.camkes  nic_driver_1.c  nic_driver_2.c
components/test_nwstack/NwStack/: network_stack.camkes  network_stack_1.c  network_stack_2.c
components/test_nwstack/Timer/: Timer.camkes
components/test_nwstack/TimerClient/: TimerClient.camkes
config/: Seos_Nw_Config.h
docker/: entrypoint.sh
interfaces/: ChanMuxInf.camkes  NwStackInf.camkes  configuration.camkes  timer.camkes  timer_client.camkes
plat/nitrogen6sx/: plat_nic.camkes  plat_nic.cmake
plat/rpi3/: plat_nic.camkes  plat_nic.cmake
plat/rpi4/: plat_nic.camkes  plat_nic.cmake
plat/sabre/: plat_nic.camkes  plat_nic.cmake
plat/zynq7000/: plat_nic.camkes  plat_nic.cmake
plat/zynqmp/: plat_nic.camkes  plat_nic.cmake
test_applications/: send_TCP_data.py  send_UDP_data.py  start_netcat_clients_tcp_1MB.sh  start_netcat_clients_tcp_240kB.sh  start_netcat_clients_udp_240kB.sh  start_py_benchmark_tcp_10MB_local.sh  start_py_benchmark_tcp_1MB.sh  start_py_benchmark_tcp_1MB_local.sh  start_py_clients_tcp_10MB_local.sh  start_py_clients_tcp_1MB.sh  start_py_clients_tcp_1MB_local.sh  start_py_clients_tcp_240kB.sh  start_py_clients_tcp_240kB_local.sh  start_py_clients_udp_10MB_local.sh  start_py_clients_udp_240kB.sh
test_configuration/multi_server/: main.camkes  test_configuration.cmake
test_configuration/tcp_client_multiple_clients/: main.camkes  test_configuration.cmake
test_configuration/tcp_client_multiple_sockets/: main.camkes  test_configuration.cmake
test_configuration/tcp_client_send/: main.camkes  test_configuration.cmake
test_configuration/tcp_client_single_socket/: main.camkes  test_configuration.cmake
test_configuration/tcp_server/: main.camkes  test_configuration.cmake
test_configuration/tcp_server_recv/: main.camkes  test_configuration.cmake
test_configuration/udp_server/: main.camkes  test_configuration.cmake
test_data/: UDP_data.txt  data_240kB
util/: loop.h  loop_defines.h  non_blocking_helper.c  non_blocking_helper.h
(+22 files in other folders)
